--- a/style.css
+++ b/style.css
@@ -119,7 +119,6 @@ nav {
     margin-right: 159px;
     margin-top: 116px;
     font-family: Arial, sans-serif;
-
 }
 
 .stats-container h2 {
@@ -146,4 +145,56 @@ nav {
     margin-top: 8px;
     font-size: 20px;
     color: rgba(117, 117, 117, 1);
+}
+
+/* card-section style */
+.rating-container {
+    margin-top: 137px;
+}
+
+
+
+.card-bottom {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+.card-bottom img {
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
+}
+
+.rating-title {
+    text-align: center;
+}
+
+.card {
+    border: 2px solid black;
+    width: 360px;
+    height: 230px;
+    background-color: rgba(253, 254, 255, 1);
+    border-radius: 10px;
+    padding-top: 24px;
+    padding-left: 24px;
+  
+
+}
+.card-description h1{
+    color:rgba(30, 30, 30, 1);
+    font-size: 24px
+}
+.card-description p{
+    font-size: 16px;
+  
+}
+.card-bottom h3{
+    color: #757575;
+    font-size: 16px;
+    font-weight: 800;
+}
+.date{
+    color: #B3B3B3;
+    font-weight: 500;
 }
