--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ nav {
     font-weight: bold;
     border-radius: 10px;
     border: none;
+    cursor: pointer;
 }
 
 .btn-primary-stay {
@@ -49,6 +50,17 @@ nav {
     border-radius: 10px;
     border: none;
     align-items: center;
+    cursor: pointer;
+}
+
+.btn-primary-stay:hover {
+ background-image: linear-gradient(to right, #f6d365 0%, #fda085 51%, #f6d365 100%);
+    box-shadow: 0 4px 10px 0 rgba(116, 79, 168, 0.75);
+}
+
+.btn-primary:hover {
+    background-image: linear-gradient(to right, #0ba360, #3cba92, #30dd8a, #2bb673);
+    box-shadow: 0 4px 10px 0 rgba(23, 168, 108, 0.75);
 }
 
 /* header style */
@@ -80,6 +92,11 @@ nav {
     font-weight: bold;
     border-radius: 10px;
     border: none;
+}
+
+.btn-primary-Launch:hover {
+     background-image: linear-gradient(to right, #f5ce62, #e43603, #fa7199, #e85a19);
+    box-shadow: 0 4px 10px 0 rgba(229, 66, 10, 0.75);
 }
 
 .Action {
@@ -150,8 +167,8 @@ nav {
 /* card-section style */
 .rating-container {
     margin-top: 13px;
-    margin-left: 151px;
-    margin-right: 149px;
+    margin-left: 55px;
+    margin-right: 70px;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -285,9 +302,10 @@ nav {
 }
 
 .form-title {
-    font-size: 80px;
+    font-size: 60px;
 }
-.touch-botton{
+
+.touch-botton {
     width: 520px;
     height: 48px;
     background-color: rgb(78, 71, 255);
@@ -300,13 +318,22 @@ nav {
     align-items: end;
     justify-content: space-between;
 }
-.form{
+
+.touch-botton:hover {
+   background-image: linear-gradient(to right, #009245, #FCEE21, #00A8C5, #D9E021);
+    box-shadow: 0 4px 10px 0 rgba(83, 176, 57, 0.75);
+    
+}
+
+
+.form {
     padding-top: 71px;
     padding-bottom: 71px;
 }
+
 /* footer section style */
 
-.footer{
+.footer {
     background-color: rgba(255, 255, 255, 1);
     height: 428px;
     margin-top: 14px;
@@ -317,28 +344,38 @@ nav {
     padding-left: 455px;
 
 }
-.footer ul li{
+
+.footer ul li {
     list-style: none;
 
 }
-.end{
-    color: #8987A1;
+
+.end {
+    color: #9290a8;
     display: flex;
     align-items: center;
     gap: 20px;
     text-align: center;
- 
     font-size: 20px;
     justify-content: center;
-
-    
 }
-.footer h1{
+
+.end a {
+    text-decoration: none;
+    color: #8987A1;
+}
+.end a:hover{
+     background-image: linear-gradient(to right, #25aae1, #40e495, #30dd8a, #2bb673);
+    box-shadow: 0 4px 15px 0 rgba(49, 196, 190, 0.75);
+}
+
+.footer h1 {
     color: rgba(78, 71, 255, 1);
     font-size: 100px;
     margin-bottom: 10px
 }
-.footer p{
+
+.footer p {
     color: #8987A1;
     font-size: 20px;
     margin-top: 10px;
